<resources>
    <string name="app_name">timetable</string>

    <string name="timetable">Рассписание</string>
    <string name="dictionary">Словарь</string>
    <string name="settings">Настройки</string>

    <string-array name="weeks">
        <item>Первая</item>
        <item>Вторая</item>
    </string-array>

    <string-array name="days">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>

    <string-array name="lists">
        <item>Названия</item>
        <item>Преподаватели</item>
        <item>Корпуса</item>
        <item>Аудитории</item>
        <item>Типы</item>
        <item>Время</item>
    </string-array>

    <string name="name">Название</string>
    <string name="teacher">Преподаватель</string>
    <string name="building">Корпус</string>
    <string name="classroom">Аудитория</string>
    <string name="start">Начало</string>
    <string name="end">Конец</string>
    <string name="type">Тип</string>
    <string name="set_time">Выберите время</string>
    <string name="set">Назначить</string>
    <string name="week">Неделя</string>
    <string name="day">День</string>

    <string name="create">Создание</string>
    <string name="edit">Редактирование</string>

    <string name="clear_fields">Отчистить поля</string>

    <string name="empty_string_error">Поле обязательно к заполнению</string>
    <string name="empty_time_error">Время не может быть пустым</string>
    <string name="value_time_error">Время окночания должно быть позже времени начала</string>

    <string name="choose_time">Выберите время</string>
    <string name="choose_week">Выберите неделю</string>
    <string name="choose_day">Выберите день</string>
    <string name="list_empty">Список пуст</string>

    <string name="main_with_additional">%1$s(%2$s)</string>
    <string name="today">%1$s - сегодня</string>

    <string name="no_lesson">Нет занятий</string>

    <string name="arrow">Стрелка</string>
    <string name="edit_ex">Редактировть</string>
    <string name="copy_ex">Копировать</string>
    <string name="delete_ex">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="where">Куда?</string>

    <string name="empty">Пусто</string>

    <string name="new_value">Новое значение</string>
    <string name="error_value_already_exist">Значение уже существует</string>
    <string name="save">Сохранить</string>

    <string name="before_start">До начала: %1$s</string>
    <string name="before_end">До конца: %1$s</string>
    <string name="after_end">После конца: %1$s</string>

    <string name="freedom">Свобода!</string>
    <string name="no_lesson_today">На сегодня все занятия закончены</string>
</resources>
