<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/arrow"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/arrow"
        android:src="@drawable/ic_arrow_down_white_24dp" />

    <!--Expandable part-->

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/name"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/listDivider"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/edit_ex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/edit_ex"
        android:padding="5dp"
        android:src="@drawable/ic_edit_white_24dp"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/delete_ex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_alignParentEnd="true"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete_ex"
        android:padding="5dp"
        android:src="@drawable/ic_delete_red_24dp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/usingLessons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_ex"
        android:visibility="gone" />

</RelativeLayout>