<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lesson"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginTop="5dp"
    android:animateLayoutChanges="true"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/lessonNameAndType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/arrow"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/arrow"
            android:src="@drawable/ic_arrow_down_white_24dp" />

        <TextView
            android:id="@+id/lessonTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lessonNameAndType"
            android:layout_alignParentStart="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lessonPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lessonTeacher"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/lessonTime"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lessonTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/lessonPlace"
            android:layout_alignParentEnd="true"
            android:textSize="18sp" />

        <!--Expandable part-->

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/lessonPlace"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/listDivider"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/edit_ex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/edit_ex"
            android:padding="5dp"
            android:src="@drawable/ic_edit_white_24dp"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/copy_ex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_toStartOf="@id/delete_ex"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/copy_ex"
            android:padding="5dp"
            android:src="@drawable/ic_copy_white_24dp"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/delete_ex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_alignParentEnd="true"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/delete_ex"
            android:padding="5dp"
            android:src="@drawable/ic_delete_red_24dp"
            android:visibility="gone" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>